* change username to name * populate skill and hobby selection * modify endpoint

--- a/src/app/pages/add-freelancer/add-freelancer.component.html
+++ b/src/app/pages/add-freelancer/add-freelancer.component.html
@@ -21,7 +21,7 @@
       <nz-form-item>
         <nz-form-label [nzSpan]="2" nzFor="name">Name</nz-form-label>
         <nz-form-control [nzSpan]="6">
-          <input nz-input [(ngModel)]="freelancer.username" name="username" type="text" id="username" [disabled]="disableInput">
+          <input nz-input [(ngModel)]="freelancer.name" name="name" type="text" id="name" [disabled]="disableInput">
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
