--- a/src/app/pages/freelancer-list/freelancer-list.component.html
+++ b/src/app/pages/freelancer-list/freelancer-list.component.html
@@ -31,7 +31,7 @@
       <tbody>
         <tr *ngFor="let freelancer of freelancerTable.data; let i = index">
           <td>{{i + 1}}</td>
-          <td>{{freelancer.username}}</td>
+          <td>{{freelancer.name}}</td>
           <td>{{freelancer.email}}</td>
           <td>{{freelancer.phoneNo}}</td>
           <td>{{freelancer.skills}}</td>
