* float button right

--- a/src/app/pages/freelancer-list/freelancer-list.component.html
+++ b/src/app/pages/freelancer-list/freelancer-list.component.html
@@ -1,10 +1,9 @@
-<div nz-row>
-  <div nz-col>
+<div nz-row style="margin-bottom: -15px;">
+  <div nz-col nzSpan="10">
     <h4 nz-typography>Freelancer Directory</h4>
   </div>
-
-  <div id="btnDiv" nz-col nzFlex="auto">
-    <button nz-button nzType="primary" routerLink="/freelancer/add">Add</button>
+  <div nz-col nzFlex="auto">
+    <button nz-button style="float: right;" nzType="primary" routerLink="/freelancer/add">Add</button>
   </div>
 </div>
 
